--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="color-scheme" content="light dark">
    <meta name="supported-color-schemes" content="light dark">
-	<title>Email Template 1</title>
+	<title>Spotify</title>
 	<style type="text/css">
 		@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
       table {
